--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,5 @@
-body {
-  font-family: blue;
-}
+/*Common Navbar*/
 
-footer {
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
 .navbar {
   padding: 0;
 }
@@ -44,70 +37,83 @@ footer {
   color: white;
 }
 
+/*Common footer*/
+footer {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 30px;
+  color: black;
+}
+
+footer a {
+  padding: 70px;
+  color: black;
+}
+
+.fa-instagram {
+  line-height: 25px;
+  border-radius: 100%;
+  color: #fff;
+  background: #d6249f;
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
+}
+
+.link-instagram {
+  font-family: "Caveat", cursive;
+  text-decoration: none;
+  padding: 0;
+}
+
+/*From here goes on index.html*/
 .homepage-row {
   font-family: "Maven Pro", sans-serif;
-  margin: 0 10%;
-}
-
-.title-homepage h1 {
-  font-size: 100px;
-  color: #353cf7;
-  font-family: "Tenor Sans", sans-serif;
-  margin-top: 40px;
-}
-
-.column-developer {
-  margin-top: 250px;
-  text-align: center;
-}
-
-.column-developer h2 {
-  font-size: 50px;
-  margin-bottom: 30px;
-}
-
-.column-developer h5 {
-  color: #e6cd7e;
-  margin-top: 15px;
-}
-
-.column-developer p {
-  padding: 10px;
-  font-family: "Tenor Sans", sans-serif;
-  text-align: justify;
+  margin: 0 auto;
 }
 
 .column-image {
   text-align: center;
 }
 
-.img-portfolio {
-  width: 350px;
+.column-image h1 {
+  font-size: 100px;
+  color: #353cf7;
+  font-family: "Tenor Sans", sans-serif;
+  margin-top: 40px;
 }
 
-.column-coder {
+.img-portfolio {
+  width: 350px;
+  border-radius: 50px;
+}
+
+.column-text {
   margin-top: 250px;
   text-align: center;
 }
 
-.column-coder h2 {
+.column-text h2 {
   font-size: 50px;
   margin-bottom: 30px;
 }
 
-.column-coder h5 {
+.column-text h5 {
   color: #e6cd7e;
   margin-top: 15px;
 }
 
-.column-coder p {
+.column-text p {
   padding: 10px;
   font-family: "Tenor Sans", sans-serif;
   text-align: justify;
-}
-
-.img-portfolio {
-  border-radius: 50px;
 }
 
 .card {
@@ -120,42 +126,11 @@ footer {
   border: 4px solid #bfd65a;
 }
 
-footer {
-  margin-top: 50px;
-  margin-top: 50px;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-
-footer a {
-  padding: 40px;
-}
-
-a {
-  color: black;
-  padding: 10px;
-}
-
-.fa-instagram {
-  color: black;
-}
-
-.link-instagram {
-  font-family: "Caveat", cursive;
-  text-decoration: none;
-  padding: 0;
-}
-
-.col-footer {
-  display: flex;
-}
-
 /*From here goes on for about.html*/
 .about-row {
   font-family: "Tenor Sans", sans-serif;
   margin: 0 5%;
-  margin-top: 110px;
+  margin-top: 50px;
   padding: 40px;
   border-top: 10px solid black;
   border-bottom: 10px solid black;
@@ -260,8 +235,7 @@ a {
   font-family: "Tenor Sans", sans-serif;
   font-size: 30px;
   text-align: center;
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin: 60px 10%;
   padding: 50px;
   border-top: 10px solid black;
   border-bottom: 10px solid black;
@@ -272,16 +246,32 @@ a {
   margin-bottom: 30px;
   font-family: "Maven Pro", sans-serif;
 }
-.contact.email-link {
+.contact a.email-link {
   font-weight: bolder;
+  color: #b0a46f;
 }
 .contact footer {
   font-size: 50px;
-  margin-top: 60px;
-  margin-left: 25%;
-  margin-right: 25%;
   padding: 15px;
+  margin: 60px 10%;
   border: 2px;
+  border-radius: 20px;
   border-style: dashed solid;
   border-color: #b0a46f;
+}
+
+.contact footer a.link-instagram i.fa-instagram {
+  line-height: 43px;
+  border-radius: 100%;
+  color: #fff;
+  background: #d6249f;
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
 }
