--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,7 @@ footer a {
 
 /*From here goes on for about.html*/
 .about-row {
+  align-items: center;
   font-family: "Tenor Sans", sans-serif;
   margin: 0 5%;
   margin-top: 50px;
@@ -138,6 +139,7 @@ footer a {
 
 .column-img {
   text-align: center;
+  margin-top: 110px;
 }
 
 .column-img img {
@@ -145,7 +147,7 @@ footer a {
 }
 
 .column-img h4 {
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 .column-description {
