--- a/src/styles.css
+++ b/src/styles.css
@@ -88,10 +88,11 @@ footer a {
 
 .title-name {
   text-align: center;
-  font-size: 80px;
+  font-size: 100px;
   color: #353cf7;
   font-family: "Tenor Sans", sans-serif;
   margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .column-image {
