--- a/src/styles.css
+++ b/src/styles.css
@@ -54,8 +54,12 @@ footer {
 }
 
 footer a {
-  padding: 70px;
+  padding: 30px;
   color: black;
+}
+
+.fa-facebook {
+  color: #344d88;
 }
 
 .fa-instagram {
@@ -74,10 +78,17 @@ footer a {
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
 }
 
-.link-instagram {
+a.link-instagram {
   font-family: "Caveat", cursive;
   text-decoration: none;
-  padding: 0;
+}
+
+.fa-linkedin {
+  color: #0063c2;
+}
+
+.fa-twitter {
+  color: #1c96e8;
 }
 
 /*From here goes on index.html*/
